<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="DUT_EcDevice" Id="{6cec24f0-c59b-4ab2-9bf0-b6fda49b0d71}">
    <Declaration><![CDATA[TYPE DUT_EcDevice :
STRUCT
	iDeviceState: INT;
	sDeviceState :STRING;
	iLinkState: INT;
	nAddrr: WORD;
	sType: STRING;
	sName:STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>